# batmam

./: .gitignore  CLAUDE.md  INSTALL_SYSTEM_CLOW_APP.md  README.md  SYSTEM_CLOW_APP_SETUP.md  TOOLS_AND_AGENTS.md  app.py  batmam.sh  clow.sh  install.sh  nohup.out  package.json  pyproject.toml  seguro_de_vida_importancia.docx  seguro_de_vida_importancia.html  test_dalle_vercel.py  test_deepseek.py  test_e2e_conversation.sh  test_full_system.py  test_lp.py  test_marketplace.py  test_orchestrator.py  test_pipeline.py  test_vps_deployment.sh  teste.txt  vendas.xlsx  vite.config.js
.claude/: settings.json
batmam/: __init__.py  __main__.py  agent.py  agent_types.py  backup.py  cli.py  client.py  config.py  context.py  cron.py  hooks.py  logging.py  mcp.py  memory.py  models.py  permissions.py  plugins.py  prompts.py  sandbox.py  session.py  skills.py  tasks.py  triggers.py  webapp.py  worktree.py
chrome-extension/: background.js  content.js  context-detector.js  manifest.json  overlay.css  popup.html  popup.js
clow/: __init__.py  __main__.py  _skills_cli.py  agent.py  agent_templates.py  agent_types.py  api_keys.py  audit.py  automations.py  autopilot.py  backup.py  backup_export.py  bash_engine.py  billing.py  blast_sender.py  bootstrap.py  bridge.py  builtin_hooks.py  carol_nio_agent.py  chatwoot.py  chatwoot_integration.py  chatwoot_sync.py  checkpoints.py  claude_code_bridge.py  cli.py  client.py  clow_md_template.py  compaction.py  config.py  context.py  context_assembly.py  coordinator.py  crm_agent_training.py  crm_auto_funnel.py  crm_daily_report.py  crm_followup.py  crm_intelligence.py  crm_models.py  cron.py  database.py  (+65 more)
deploy/: Dockerfile  clow-webhook.service  clow.service  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx-clow.conf  webhook.py
df-festas-improved/: package.json  tailwind.config.js
docs/: SCALING.md  nginx-auth-request-disabled.conf  nginx-clow-emergency.conf
scripts/: backup_sqlite.sh  chatwoot_report.py  create_stripe_plans.py  migrate_global_memory.py  migrate_sqlite_to_pg.py
static/: index.html  manifest.json  reset-cache.html  service-worker.js
tests/: loadtest_quick.py  locustfile.py  test_agent_improvements.py  test_billing_critical.py  test_bonus_features.py  test_bridge.py  test_byok.py  test_config.py  test_context.py  test_crm_auto_funnel.py  test_e2e.py  test_hooks.py  test_install_tokens.py  test_integration.py  test_interplanetary_improvements.py  test_jawdrop_improvements.py  test_levenshtein.py  test_lifecycle.py  test_log_config.py  test_logging.py  test_lsp.py  test_mcp.py  test_migrations.py  test_monstrous_improvements.py  test_oauth.py  test_permissions.py  test_plugins.py  test_rate_limit.py  test_sandbox.py  test_security_owasp.py  test_surreal_improvements.py  test_tenancy.py  test_webapp.py  test_webapp_endpoints.py  test_websocket.py  test_whatsapp_agent.py
(+271 files in other folders)
