[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clow"
version = "0.2.0"
description = "Clow - Agente de código AI no terminal. Seu assistente de engenharia de software powered by AI."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Daniel"},
]
keywords = ["ai", "agent", "code", "cli", "assistant", "deepseek", "clow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development",
]
dependencies = [
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "stripe>=8.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
pdf = ["pdfplumber>=0.9.0"]

[project.scripts]
clow = "clow.cli:main"

[project.urls]
Homepage = "https://github.com/daniellbaptista2021-lgtm/clow"

[tool.setuptools.packages.find]
include = ["clow*"]
